2002-11-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nndraft.el (nndraft-request-article): Don't give a special
	treatment to Mule.

	* lisp/nnheader.el (nnheader-auto-save-coding-system): Undo last
	change to restore the default value to emacs-mule or escape-quoted.

2002-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-mime-edit-article-setup): Don't
	perform `mime-edit-again' for a delayed or a queued article.
	(gnus-article-mime-edit-done): Bind `inhibit-read-only' to t while
	running `gnus-article-edit-done'.

2002-10-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/dgnushack.el (dgnushack-bind-colon-keywords): Protect
	against unexpected data structure.

2002-10-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el: Clean up codes.
	(nnshimbun-buffer, nnshimbun-current-directory)
	(nnshimbun-current-group, nnshimbun-server-directory): Removed.
	(nnshimbun-current-server, nnshimbun-server-directory)
	(nnshimbun-current-group, nnshimbun-current-directory): New macros.
	(nnshimbun-backlog, nnshimbun-find-parameter): Use
	`nnshimbun-current-server'.
	(nnshimbun-possibly-change-group, nnshimbun-open-server):
	Reimplemented.
	(nnshimbun-close-server): Do not kill `nnshimbun-buffer'.
	(nnshimbun-request-article-1, nnshimbun-request-list): Use
	`erase-buffer' instead of `delete-region'.
	(nnshimbun-request-article): Use `nnshimbun-current-group'.
	(nnshimbun-request-group): Remove redundant checks.
	(nnshimbun-request-scan): Check arguments strictly.
	(nnshimbun-retrieve-headers, nnshimbun-retrieve-headers-with-nov):
	Reimplemented.
	(nnshimbun-generate-nov-database, nnshimbun-search-id)
	(nnshimbun-write-nov, nnshimbun-request-expire-articles):
	Simplified.
	(nnshimbun-nov-buffer-name, nnshimbun-nov-file-name): Make the
	first argument optional.
	(nnshimbun-open-nov): Bind variables to set coding systems for
	path names.
	(nnshimbun-possibly-change-group, nnshimbun-request-article)