@@ -1,3 +1,10 @@
+2002-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lisp/gnus-art.el (gnus-article-prepare-display): Don't use
+	MIME-View for nndraft:delayed or nndraft:drafts groups.
+	(gnus-article-decode-article-as-default-mime-charset): Don't
+	decode an article for nndraft:delayed or nndraft:drafts groups.
+
 2002-11-06  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lisp/nndraft.el (nndraft-request-article): Don't give a special
